Changelog
=========

3.0b5 - Unreleased
------------------

- Fixed the whole references handling. Prior it used the saved references for
  synchronization, with the effect of ignoring new refs. Now it uses actually
  the given new values and looks up them. It deals now with partly translated 
  targets and non-translatable targets. Also I cleaned up this part of the
  code. 
  [jensens]

3.0b4 - 2009-10-02
------------------

- Fixed a serious bug that showed itself with multi valued reference fields and
  archetypes.referencebrowserwidget. Since we render language independent
  fields on the translate_item view in view mode, their data wasn't part of the
  request anymore. Omitting a field from the request is considered equivalent
  to "delete all" by processForm. We now override _processForm to ignore
  language independent fields in processForm on canonical items. This also
  gives a bit of a speed advantage.
  [hannosch]

- LinguaPlone didn't allow manual editing of IDs. Thanks to David Hostetler
  for the patch. This closes http://plone.org/products/linguaplone/issues/70.
  [hannosch]

- Removed dubious performance optimization in tests. Don't delete the catalog.
  [hannosch]

- Removed bogus license headers from Python files. All code is owned by the
  Plone Foundation and licensed under the GPL.
  [hannosch]

3.0b3 - 2009-09-26
------------------

- Update the requirement to Plone 3.3 instead of individual packages. We don't
  test this version against former Plone versions anymore. Removed no longer
  required code for pre-Plone 3.1.
  [hannosch]

- If no item was selected in the link translations form, a random item was
  selected in the form handler. Thanks to Ichim Tiberiu for the patch. This
  closes http://plone.org/products/linguaplone/issues/204.
  [hannosch]

- Restored the proper functionality of the change language function on the
  manage_translations_form. This closes
  http://plone.org/products/linguaplone/issues/215.
  [hannosch]
